--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,26 @@
+html,body{
+  margin: 0;
+}
+
+body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+}
+
 h1 {
   text-align: center;
   color: lightblue;
-  font-size: 50px;
+  font-size: 120px;
+}
+
+
+.todo-list {
+  width: 600px;
+  height: 600px;
+  border: 1px solid black;
+  background-color: rgb(214, 185, 142);
 }
